[tool.poetry]
name = "offmark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [ { include = "**/*.py", from = "./src"  }] 

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.23.3"
opencv-python = ">=4.6.0.66"
pywavelets = ">=1.4.1"
dtcwt = ">=0.12.0"
scipy = ">=1.9.1"
ffmpeg-python = ">=0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
